--- a/Reference.tex
+++ b/Reference.tex
@@ -1,1 +1,9 @@
-\input{ref/INSPIRE-Cite-360107.tex}
+\input{ref/PDG.tex}
+\input{ref/quark_condencate.tex}
+\input{ref/QCD_PhaseDiagram.tex}
+\input{ref/QGP_evo.tex}
+\input{ref/dilepton_measurement.tex}
+\input{ref/ALICERun2Dilepton.tex}
+\input{ref/expected_dilepton.tex}
+\input{ref/NA60Results.tex}
+\input{ref/MFT_TDR.tex}
