--- a/3_Analysis.tex
+++ b/3_Analysis.tex
@@ -304,7 +304,7 @@ Here is the translation of your provided text:
             \end{figure}
             \subsection{Fake Match Track Removal Analysis of MFT-MCH-MID Track using MFT Track $\eta$ - MCH Track $\eta$}
             \label{Analysis:Matching}
-                The matching of MFT Tracks located before the hadron absorption pair and MCH Tracks located behind them is important for the quality of physical quantities such as single muon $p_T$ and $\eta$. Here, we performed an analysis to remove MFT-MCH-MID tracks, which match incorrect tracks, by applying cuts to the already reconstructed Global Tracks using three detectors. The dataset used is LHC24b1, which is a Monte Carlo dataset for $pp\sqrt{s}=13.6$TeV minimum-bias events. This simulation data is detailed in \ref{Appendix:compair_Real_and_MC}.
+                The matching of MFT Tracks located before the hadron absorption pair and MCH Tracks located behind them is important for the quality of physical quantities such as single muon $p_T$ and $\eta$. Here, we performed an analysis to remove MFT-MCH-MID tracks, which match incorrect tracks, by applying cuts to the already reconstructed Global Tracks using three detectors. The dataset used is LHC24b1, which is a Monte Carlo dataset for $pp\sqrt{s}=13.6$TeV minimum-bias events. This simulation data is detailed in % \ref{Appendix:compair_Real_and_MC}.
                 
                 The tracks reconstructed with MFT-MCH-MID tracks, as shown in \ref{Analysis:Matching:eta}, include tracks reconstructed outside the acceptance. The black histogram shows the $\eta$ distribution of the reconstructed Global Tracks. Blue represents the $\eta$ distribution of fake match tracks, and red represents the $\eta$ distribution of correct match tracks. The green distribution corresponds to the true $\eta$ distribution for the black tracks. By comparing the green and black distributions, we observe that muons outside the acceptance are reconstructed, and they form the distribution of fake matches. 
                 To remove such tracks, we applied the following $\Delta \eta$ cut:
