checked English in all chapter

--- a/2_Detector.tex
+++ b/2_Detector.tex
@@ -18,7 +18,7 @@
             \label{ALICE_detectors}
         \end{figure}
         The detectors can be broadly divided into two main groups: the barrel detector group and the forward detector group.
-        The barrel detector group includes detectors such as ITS, TPC, TOF, EMCal, TRD, PHOS/CPV, and HMPID. A magnetic field is applied along the beam axis, bending the motion of charged particles and enabling particle identification, momentum, and energy measurements. The forward detector group is specifically designed for muon measurements and consists of three trackers—MFT, MCH, and MID—and two hadron absorbers. A dipole magnet is placed between MCH, allowing the measurement of muon momentum and sign. Other detectors include ZDC and FIT. The ZDC is placed far forward of the collision point and measures the number of neutrons and protons, determining the centrality of heavy-ion collision events. The FIT detectors are placed both forward and backward and are used for measuring event luminosity and particle multiplicity.
+        The barrel detector group includes detectors such as ITS, TPC, TOF, EMCal, TRD, PHOS/CPV, and HMPID. A magnetic field is applied along the beam axis, bending the motion of charged particles and enabling particle identification, momentum, and energy measurements. The forward detector group is specifically designed for muon measurements and consists of three trackers—MFT, MCH, and MID—and two hadron absorbers. A dipole magnet is placed between MCH, allowing the measurement of muon momentum and sign. Other detectors include ZDC and FIT. The ZDC is placed far forward from the collision point and measures the number of neutrons and protons, determining the centrality of heavy-ion collision events. The FIT detectors are placed both forward and backward and are used for measuring event luminosity and particle multiplicity.
 
         \subsubsection{MUON Spectrometer}
             \begin{figure}
@@ -26,7 +26,7 @@
                 \includegraphics[keepaspectratio, scale=0.25]{fig/2_2_MUONspectrometer.png}
                 \caption{MUON spectrometer}
             \end{figure}
-            The MUON spectrometer consists of the Front Absorber, MCH, Iron Wall, and MID, and has an acceptance range of $-4.0 < \eta < -2.5$. It uses the high penetration power of muons to identify them. Various particles generated at the collision point (IP) pass through the Front Absorber. Hadrons and light electrons, which interact strongly, are absorbed by the Front Absorber, while muons, due to their high penetration power, pass through it. The muons that pass through the Front Absorber are detected, and any particles such as $\pi$ mesons that are produced from interactions within the Front Absorber are measured by the MCH. These particles are then absorbed in the Iron Wall, so they are not detected by the MID. Therefore, muon identification (PID) is performed by combining tracks measured in the MCH and MID. The momentum of the muons is measured using a dipole magnet in the MCH, which is set at a magnetic flux density of 3.0T.
+            The MUON spectrometer consists of the Front Absorber, MCH, Iron Wall, and MID, and has an acceptance range of $-4.0 < \eta < -2.5$. It uses the high penetration power of muons to identify them. Various particles generated at the collision point (IP) pass through the Front Absorber. Hadrons and light electrons, which interact strongly, are absorbed by the Front Absorber. The muons pass through it due to their high penetration power. The muons that pass through the Front Absorber are detected, and any particles such as $\pi$ mesons that are produced from interactions within the Front Absorber are measured by the MCH. These particles are then absorbed in the Iron Wall, so they are not detected by the MID. Therefore, muon identification (PID) is performed by combining tracks measured in the MCH and MID. The momentum of the muons is measured using a dipole magnet in the MCH, which is set at a magnetic flux density of 3.0T.
 
         \subsubsection{MFT}
             \begin{figure}[htbp]
