--- a/4_Results.tex
+++ b/4_Results.tex
@@ -1,6 +1,6 @@
 \newpage
 \clearpage
-\section{Results}
+\section{Results and Outlook}
     This is the $p_T$ spectrum of the yield for $\omega$ and $\phi$. Since the cross section has not been calculated for the vertical axis yet, a comparison with other experimental results cannot be made. However, a distribution with an exponential dependence on $p_T$ can be observed.
     \begin{figure}[htbp]
         \centering
@@ -20,3 +20,4 @@
             \label{fig:phi_yield}
         \end{minipage}
     \end{figure}
+    As for future prospects, simulations of $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ will be conducted, followed by acceptance $\times$ efficiency corrections. The goal is to determine the production cross-section for $\omega$ and $\phi$ in forward muon pairs.
